tests/src/frontend/typechecking/invalid/join_into_readonly_4.sk
fun no(): void {
  m: readonly ?Int = Some(42);
  _: ?Int = if (true) m else None();
  void
}
